# Ronajo

./: Cargo.toml  README.md  io.github.Ronajo.json  io.github.ronajo.json  io.github.ronajo.json~  meson.build
data/: io.github.Ronajo.desktop.in  io.github.Ronajo.gschema.xml  io.github.Ronajo.metainfo.xml.in  io.github.ronajo.desktop.in  io.github.ronajo.gschema.xml  io.github.ronajo.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Ronajo.gresource.xml  application.rs  config.rs  gst-plugin-gtk4-sources.json  main.rs  meson.build  ronajo.gresource.xml  show_data.rs  tools.rs  window.rs  window.ui
src/core/: config.rs  mod.rs  player_data.rs  show_data.rs
src/device_object/: imp.rs  mod.rs
src/devices_dialog/: imp.rs  mod.rs
src/episode_object/: imp.rs  mod.rs
src/episode_row/: imp.rs  mod.rs
src/gtk/: devices-dialog.blp  episode-row.blp  help-overlay.ui  player-page.blp  preferences-dialog.blp  show-card.blp  show-page.blp  styles.css  video-page.blp  window.blp
src/password_dialog/: imp.rs  mod.rs
src/player_page/: imp.rs  mod.rs
src/preferences_dialog/: imp.rs  mod.rs
src/resources/: episode-row.blp  preferences-dialog.blp  ronajo-episode-row.ui  ronajo-preferences-dialog.ui  ronajo-show-card.ui  ronajo-show-page.ui  ronajo-styles.css  ronajo-video-page.ui  ronajo-window.ui  show-card.blp  show-page.blp  styles.css  video-page.blp  window.blp
src/show_card/: imp.rs  mod.rs
src/show_object/: imp.rs  mod.rs
src/show_page/: imp.rs  mod.rs
src/video_page/: imp.rs  mod.rs
