[package]
name = "ronajo"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "0.4.46"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst-plugin-gtk4 = "0.12.6"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
home = "0.5.9"
libssh2-sys = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.adw]
package = "libadwaita"
version = "0.6"
features = ["v1_5"]
