[package]
name = "ronajo"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst-plugin-gtk4 = "0.13.0"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14", "blueprint"] }
gst = {version = "0.23.0", package = "gstreamer"}
home = "0.5.9"
ssh2 = "0.9.4"
reqwest = {version = "0.12.5", features = ["blocking"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = {version = "1.38.0", features = ["full"] }
url = "2.5.2"
async-channel = "2.3.1"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]

